updated packages and made responsive

--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <script src="https://checkout.flywire.com/flywire-payment.js"></script>
-    <title>Flywire | Quick Pay</title>
+    <title>Flywire | UniLodge</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but Flywire's Quick Pay doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but UniLodge's payment gateway doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
